--- a/templates/vm-cloud-init.yml.j2
+++ b/templates/vm-cloud-init.yml.j2
@@ -5,7 +5,7 @@ ssh_pwauth: True
 disable_root: False
 chpasswd:
   list: |
-    root::{{ vm_password }}
+    root:{{ vm_password }}
     cloud-user:{{ vm_password }}
   expire: false
 runcmd:
